--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ logging.level.pl.sda.javalondek4springdemo.controller.MyFirstRestController=debu
 
 logging.level.pl.sda.javalondek4springdemo.converter=debug
 #logging.level.org.springframework=debug
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:my-db
+spring.datasource.username=sa
+spring.datasource.password=
